button and mod1 zip

--- a/module-one/learning-sequence/index.html
+++ b/module-one/learning-sequence/index.html
@@ -8,7 +8,7 @@ title: Bionic eye module 1
 ---
 <div class="container">
     <h2>Learning sequence</h2>
-    <p class="act-pack-download">Download the resource pack for this module: <a class="download button">bionic-eye-mod1-resources.zip (???KB)</a></p>
+    <p class="act-pack-download">Download the resource pack for this module: <a href="Bionic-eye-module1.zip" class="download button">Bionic-eye-module1.zip (6.2MB)</a></p>
     <h3>Learning activities summary</h3>
     <p class="note">More details are contained within the detail design document in the resource pack above.</p>
     <section class="activity">
