--- a/module-three/learning-sequence/index.html
+++ b/module-three/learning-sequence/index.html
@@ -8,7 +8,7 @@ title: Bionic eye module 3
 ---
 <div class="container">
     <h2>Learning sequence</h2>
-    <p class="act-pack-download">Download the resource pack for this module: <a class="download button">bionic-eye-mod3-resources.zip (???KB)</a></p>
+    <p class="act-pack-download">Download the resource pack for this module: <a class="download button" href="Bionic-eye-module3.zip">Bionic-eye-module3.zip (2.9MB)</a></p>
     <h3>Learning activities summary</h3>
     <p class="note">More details are contained within the detail design document in the resource pack above.</p>
     <section class="activity">
@@ -29,11 +29,11 @@ title: Bionic eye module 3
                 <ul>
                     <li>Videos:
                         <ul>
-                            <li>Visual perception: part 1</li>
-                            <li>Visual perception: part 2</li>
+                            <li><a rel="external" title="open external link" href="https://youtu.be/7AC6RDjICU4">Visual perception: part 1</a></li>
+                            <li><a rel="external" title="open external link" href="https://youtu.be/4mONwqtJZIw">Visual perception: part 2</a></li>
                         </ul>
                     </li>
-                    <li>Worksheet or online questions</li>
+                    <li>Student-Worksheets / <b>01-Questions-PART-1-2.docx</b></li>
                 </ul>
             </div>
         </div>
@@ -47,7 +47,11 @@ title: Bionic eye module 3
             <div class="col">
                 <h4>Teacher activity</h4>
                 <p>Lead activity of ‘Predicting what the image is’ using the webquest.</p>
-                <p>Lead class in discussion of the role of resolution in image perception using supplied </p>
+                <p>Lead class in discussion of the role of resolution in image perception using supplied.</p>
+                <h4>Teacher resources</h4>
+                <ul>
+                    <li>Teaching-notes / <b>Suggested-Questions-to-Facilitate-Class-Discussion.docx</b></li>
+                </ul>
             </div>
             <div class="col">
                 <h4>Student activity</h4>
@@ -59,8 +63,8 @@ title: Bionic eye module 3
                 <p>Their findings are then related to human vision.</p>
                 <h4>Resources required</h4>
                 <ul>
-                    <li>Webquest: <a href="http://goddardduncan.tumblr.com/post/143187911929/exploring-the-role-of-resolution-in-image">Exploring the Role of Resolution in Image Identification</a></li>
-                    <li><i>Goddard, D. (2016). Exploring the Role of Resolution in Image Identification</i>. Available: <a href="http://goddardduncan.tumblr.com/post/143187911929/exploring-the-role-of-resolution-in-image">here</a>. Last accessed 14th July 2016.</li>
+                    <li>Video: <a rel="external" title="open external link" href="https://youtu.be/9G90CpRVHLM">Visual perception: part 3</a></li>
+                    <li>Blog post (webquest): <a href="http://goddardduncan.tumblr.com/post/143187911929/exploring-the-role-of-resolution-in-image">Exploring the Role of Resolution in Image Identification</a></li>
                 </ul>
             </div>
         </div>
@@ -80,8 +84,8 @@ title: Bionic eye module 3
                 <p>Students watch videos and answer questions.</p>
                 <h4>Resources required</h4>
                 <ul>
-                    <li>Video Part 4</li>
-                    <li>Questions on worksheet</li>
+                    <li><a rel="external" title="open external link" href="https://youtu.be/PVFKK6g0aTY">Visual perception: part 4</a></li>
+                    <li>Student-Worksheets / <b>02-Questions-PART-4-Moving-FOV.docx</b></li>
                 </ul>
             </div>
         </div>
@@ -95,26 +99,21 @@ title: Bionic eye module 3
             <div class="col">
                 <h4>Teacher activity</h4>
                 <p>Lead activity of ‘Predicting what the image is’ with moving view.</p>
-                <h4>Teacher resources</h4>
-                <ul>
-                    <li>Teacher notes: Using Predict-Observe-Explain to lead inquiry</li>
-                    <li>For an equipment list, exemplar ray diagrams and rundown of how to set the model up see Teacher notes: Protocol for Eye Setup and Ray_diagrams_representing_light.pptx</li>
-                    <li>Questions to stimulate discussion around this</li>
-                </ul>
             </div>
             <div class="col">
                 <h4>Student activity</h4>
                 <p>Students are presented with an image that is covered by a sheet of paper that creates a “moving field of view”.</p>
-                <p>See Cutout template.pdf, Template part 1.pdf and instructions for assembly.</p> <p>Students are encouraged to move the field of view over the pictures and see if they can identify the images hidden by the moving field of view cover.</p>
+                <p>Students are encouraged to move the field of view over the pictures and see if they can identify the images hidden by the moving field of view cover.</p>
                 <p>Students reflect on their methods at solving the puzzle.</p>
                 <p>Students pool their data.</p>
                 <p>Students discuss as a class methods to solve the puzzle and analyse trends.</p>
                 <p>Students consider how this activity may reveal considerations for human vision.</p>
                 <h4>Resources required</h4>
                 <ul>
-                    <li>Physical resources for creating a table-top activity for moving FOV game</li>
-                    <li>Moving FOV template and images to place on computer screen or under template</li>
-                    <li>Guide for teacher to facilitate class discussion with possible questions</li>
+                    <li>Classroom-Resources / <b>01-Instructions-for-assembly.docx</b></li>
+                    <li>Classroom-Resources / <b>02-Template-Part-A.pdf</b></li>
+                    <li>Classroom-Resources / <b>03-Template-Part-B.pdf</b></li>
+                    <li>Classroom-Resources / <b>04-images-to-fit-fixed-FOV.docx</b></li>
                 </ul>
             </div>
         </div>
