--- a/module-two/learning-sequence/index.html
+++ b/module-two/learning-sequence/index.html
@@ -8,7 +8,7 @@ title: Bionic eye module 2
 ---
 <div class="container">
     <h2>Learning sequence</h2>
-    <p class="act-pack-download">Download the resource pack for this module: <a class="download button">bionic-eye-mod2-resources.zip (???KB)</a></p>
+    <p class="act-pack-download">Download the resource pack for this module: <a class="download button" href="Bionic-eye-module2.zip">Bionic-eye-module2.zip (29.9MB)</a></p>
     <h3>Learning activities summary</h3>
     <p class="note">More details are contained within the detail design document in the resource pack above.</p>
     <section class="activity">
@@ -23,7 +23,7 @@ title: Bionic eye module 2
                 <p>Monitor student responses.</p>
                 <h4>Teacher resources</h4>
                 <ul>
-                    <li>Teacher notes: using traffic light cards for quickly identifying misconceptions and uncertainty.</li>
+                    <li>Teacher notes / <b>00-Traffic-Lights.docx</b></li>
                 </ul>
             </div>
             <div class="col">
@@ -31,7 +31,7 @@ title: Bionic eye module 2
                 <p>Students work through a quiz, which identifies their misconceptions around light and seeing.</p>
                 <h4>Resources required</h4>
                 <ul>
-                    <li>ReMSTEP Bionic Eye - LO2 - Paper Quiz.docx</li>
+                    <li>Student-Worksheets / <b>01-Quiz.docx</b></li>
                 </ul>
             </div>
         </div>
@@ -45,17 +45,13 @@ title: Bionic eye module 2
             <div class="col">
                 <h4>Teacher activity</h4>
                 <p>Give students feedback on the quiz in the form of investigations to undertake to disprove identified misconceptions.</p>
-                <h4>Teacher resources</h4>
-                <ul>
-                    <li>Teacher Notes: Flipped Classroom – Mythbusters Activity</li>
-                </ul>
             </div>
             <div class="col">
                 <h4>Student activity</h4>
                 <p>Students work through guided investigations which seek to disprove their misconceptions (at home).</p>
                 <h4>Resources required</h4>
                 <ul>
-                    <li>Short, guided investigations for students to undertake, with the inclusion of collection of data. ReMSTEP Bionic Eye - LO2 - Paper Quiz.docx</li>
+                    <li>Student-Worksheets / <b>02-Mythbusters.docx</b></li>
                 </ul>
             </div>
         </div>
@@ -71,9 +67,7 @@ title: Bionic eye module 2
                 <p>Using the Power Point presentation, explicitly identify each misconception, invite students to share the data they collected to form a representation using the graphs in Bionic Eye_Investigations_Presentation.pptx, then lead a discussion that interrogates misconceptions using findings from their investigations.</p>
                 <h4>Teacher resources</h4>
                 <ul>
-                    <li>For method to collect and display cumulative class data see Teacher notes: Method to collect and display class data.</li>
-                    <li>Power Point presentation that facilitates sharing of data students collected: Bionic Eye_Investigations_Presentation.pptx.</li>
-                    <li>Questions to stimulate discussion – questions included in above Power Point.</li>
+                    <li>Classroom Resources / <b>01-Bionic-Eye-Investigations-Presentation.pptx</b></li>
                 </ul>
             </div>
             <div class="col">
@@ -97,9 +91,9 @@ title: Bionic eye module 2
                 <p>Introduce the use of ray diagrams as a method to represent the nature of light and how it is affected by manipulations. See: Ray_diagrams_representing_light.pptx</p>
                 <h4>Teacher resources</h4>
                 <ul>
-                    <li>Teacher notes: USING PREDICT-OBSERVE-EXPLAIN TO LEAD INQUIRY</li>
-                    <li>For an equipment list, exemplar ray diagrams and rundown of how to set the model up see Teacher notes: Protocol for Eye Setup and Ray_diagrams_representing_light.pptx</li>
-                    <li>Questions to stimulate discussion around this.</li>
+                    <li>Classroom Resources / <b>02-Protocols-for-eye-setup.docx</b></li>
+                    <li>Classroom Resources / <b>04-Ray-diagrams-representing-light.pptx</b></li>
+                    <li>Teacher Notes / <b>01-Using-Predict-Observe-Explain-To-Lead-Inquiry.docx</b></li>
                 </ul>
             </div>
             <div class="col">
@@ -122,10 +116,10 @@ title: Bionic eye module 2
                 <p>Facilitate discussion/mapping of concepts from model to human eye through questioning and</p>
                 <h4>Teacher resources</h4>
                 <ul>
-                    <li>Teacher notes as to how to undertake a dissection (virtual or real) of a cow’s eye and identify common components to the model previously used and new components introduced see Teacher notes: Linking Eye Model Setup to Parts of the Eye</li>
-                    <li>Exploratorium. (2012). Cow's Eye Dissection I Exploratorium. Available: https://www.youtube.com/watch?v=0rbCrJoTatE . Last accessed 17th May 2016.</li>
-                    <li>Paper dissection guide: Exploratorium. (2016). <a href="https://www.exploratorium.edu/learning_studio/cow_eye/coweye.pdf">COW’S EYE dissection</a> - Last accessed 17th May 2016.</li>
-                    <li>For suggested questions for teacher to facilitate class discussions see Teacher notes: Suggested Questions to Facilitate Class Discussion Link the Eye Model Setup to Parts of the Eye</li>
+                    <li>Teacher Notes / <b>02-Linking-Eye-Model-to-Parts-of-Eye.docx</b></li>
+                    <li>Classroom-Resources / <b>05-Cows-eye.png</b></li>
+                    <li>Classroom-Resources / <b>06-coweye-dissection-exploratorium.pdf</b></li>
+                    <li>Video: <a rel="external" title="open external link" href="https://www.youtube.com/watch?v=0rbCrJoTatE">Cow's Eye Dissection I Exploratorium</a>, Exploratorium. (2012)</li>
                 </ul>
             </div>
             <div class="col">
@@ -137,7 +131,7 @@ title: Bionic eye module 2
                 <p>Students draw ray diagrams to demonstrate the path of light onto the retina of an eye, and to demonstrate the path of light through our model’s lens to produce an image on a screen.</p>
                 <h4>Resources required</h4>
                 <ul>
-                    <li>Worksheet to facilitate linking of model and eye structures see: Student worksheet - Cow's eye dissection.docx</li>
+                    <li>Student-Worsheets / <b>02-Student-worksheet-Cows-eye-dissection.docx</b></li>
                 </ul>
             </div>
         </div>
@@ -159,8 +153,8 @@ title: Bionic eye module 2
                 <p>Teacher works with students to negotiate what is happening and supports students in producing representations of how an image is formed on the retina by a convex lens using ray diagrams.</p>
                 <h4>Teacher resources</h4>
                 <ul>
-                    <li>See Teacher notes: Exploring how the lenses of the eyes work</li>
-                    <li>Teacher notes: Using representational practice to demonstrate understandings</li>
+                    <li>Teacher notes / <b>03-representational-practice-sketchtoy.docx</b></li>
+                    <li>Teacher notes / <b>04-Learning-Through-Constructing-Representations-in-Science.pdf</b></li>
                 </ul>
             </div>
             <div class="col">
@@ -174,8 +168,8 @@ title: Bionic eye module 2
                 <p>Through feedback about these representations from teachers and other peers, students modify their representations to demonstrate their understandings.</p>
                 <h4>Resources required</h4>
                 <ul>
-                    <li>For details on how to access PhET model and questions to pose to students to invite inquiry see: Learning Outcome 2 - Protocol for PhET 6_5_16.docx</li>
-                    <li>http://www.sketchtoy.com</li>
+                    <li>Student Worksheets / <b>03-Learning-Outcome-2-Protocol-for-PhET.docx</b></li>
+                    <li><a rel="external" title="open external link" href="http://www.sketchtoy.com">http://www.sketchtoy.com</a></li>
                 </ul>
             </div>
         </div>
@@ -192,7 +186,7 @@ title: Bionic eye module 2
                 <p>Teacher asks students to discuss their reflections in their groups.</p>
                 <h4>Teacher resources</h4>
                 <ul>
-                    <li>Teacher notes guiding students in construction of their own model of the human eye, with the goal of forming an image on a screen.</li>
+                    <li>Classroom Resources / <b>07-Materials-for-eye-model.docx</b></li>
                 </ul>
             </div>
             <div class="col">
