--- a/module-one/learning-sequence/index.html
+++ b/module-one/learning-sequence/index.html
@@ -23,7 +23,7 @@ title: Bionic eye module 1
                 <p>Teacher gives a brief overview of vision impairment.</p>
                 <h4>Teacher resources</h4>
                 <ul>
-                    <li>Classroom resources: Bionic-Eye-Introduction-Presentation.pptx - Slides 1-3</li>
+                    <li>Classroom resources / <b>Bionic-Eye-Introduction-Presentation.pptx</b> (Slides 1-3)</li>
                 </ul>
             </div>
             <div class="col">
@@ -44,9 +44,9 @@ title: Bionic eye module 1
                 <p>Teacher asks students to work in groups to brainstorm what they know about visual impairment and the challenges faced by visually impaired people.</p>
                 <h4>Teacher resources</h4>
                 <ul>
-                    <li>Classroom resources: Bionic-Eye-Introduction-Prentation.pptx - Slide 4 Question prompts to stimulate student brainstorms</li>
-                    <li>Teacher notes: 01-Brainstorming.docx</li>
-                    <li>For ideas to stimulate discussion on challenges see Teacher notes: 02-Challenges-Visual-Impairment.docx</li>
+                    <li>Classroom resources / <b>Bionic-Eye-Introduction-Prentation.pptx</b> (Slide 4 - Question prompts to stimulate student brainstorms)</li>
+                    <li>Teacher notes / <b>01-Brainstorming.docx</b></li>
+                    <li>Teacher notes / <b>02-Challenges-Visual-Impairment.docx</b> (For ideas to stimulate discussion on challenges)</li>
                     
                 </ul>
                 <h4>Assessment notes</h4>
@@ -77,7 +77,7 @@ title: Bionic eye module 1
                 <p>Teacher writes ideas on the white board and groups related ideas together.</p>
                 <h4>Teacher resources</h4>
                 <ul>
-                    <li>Teacher notes: 03-Enhancing-Student-Participation.docx  </li>
+                    <li>Teacher notes / <b>03-Enhancing-Student-Participation.docx</b></li>
                 </ul>
                 <h4>Assessment notes</h4>
                 <ul>
@@ -102,15 +102,16 @@ title: Bionic eye module 1
                 <p>Teacher explains that the vision impairment goggles must be constructed, and that the How to create box and whisker plots.mp4 video should be watched for homework.</p>
                 <h4>Teacher resources</h4>
                 <ul>
-                    <li>Printable template and instructions to make visual impairment goggles.</li>
-                    <li>Teacher notes: Flipped Classroom – VI goggles and How to create box and whisker plots.</li>
+                    <li>Classroom resources / <b>Materials-for-challenges.docx</b> (Printable template and instructions to make visual impairment goggles).</li>
+                    <li>Teacher notes / <b>04-Flipped-Classroom.pdf</b></li>
+                    <li>Video: <a rel="external" title="open external link" href="https://youtu.be/cqRtfJ_5slM">How to create Box and Whisker plots</a>.</li>
                 </ul>
             </div>
             <div class="col">
                 <h4>Student activity</h4>
                 <p>Students split into pairs and allocate jobs for creating vision impairment goggles.  There are two types of goggles and one student per pair should create one type of visual impairment goggles.</p>
                 <p>Students create goggles for homework.</p>
-                <p>Students watch instructional video for homework: How to create box and whisker plots.mp4</p>
+                <p>Students watch instructional video for homework: <a rel="external" title="open external link" href="https://youtu.be/cqRtfJ_5slM">How to create Box and Whisker plots</a></p>
                 <h4>Resources required</h4>
                 <ul>
                     <li>Protocol for Making Vision Impairment Goggles.</li>
@@ -133,19 +134,55 @@ title: Bionic eye module 1
                 <p>Teacher asks students in groups to predict the difficulties of the challenges with both types of visual impairment.</p>
                 <h4>Teacher resources</h4>
                 <ul>
-                    <li>Teacher notes: Visual impairment experience challenges. </li>
-                    <li>Teacher notes: Summary of the causes and symptoms of Macular Degeneration and Retinitis Pigmentosa.</li>
+                    <li>Teacher notes / <b>05-Causes-of-Vision-Impairment.docx</b></li>
+                    <li>Teacher notes / <b>06-Visual-impairment-challenges.docx</b></li>
                 </ul>
             </div>
             <div class="col">
                 <h4>Student activity</h4>
-                <p>Students split into pairs and allocate jobs for creating vision impairment goggles.  There are two types of goggles and one student per pair should create one type of visual impairment goggles.</p>
-                <p>Students create goggles for homework.</p>
-                <p>Students watch instructional video for homework: How to create box and whisker plots.mp4</p>
+                <p>Student groups read information cards describing Macular Degeneration and Retinitis Pigmentosa and try on vision impairment goggles.</p>
+                <p>Students discuss the two diseases and assign which goggles are representative of which disease.</p>
+                <p>Students discuss their predictions of how difficult each challenge will be with the different types of vision impairment and record their predictions on worksheets.</p>
                 <h4>Resources required</h4>
                 <ul>
-                    <li>Protocol for Making Vision Impairment Goggles.</li>
-                    <li>Template – Vision Impairment Goggles.</li>
+                    <li>Visual impairment goggles ‘A’ and ‘B’.</li>
+                    <li>Student cards describing Macular degeneration and Retinitis pigmentosa.</li>
+                    <li>Student-Worksheets / <b>Vision-Challenges-worksheet.docx</b></li>
+                </ul>
+            </div>
+        </div>
+    </section>
+    <section class="activity">
+        <header>
+            <p><span class="activity-number">Part 6</span> <span class="activity-time">50-60 min</span></p>
+        </header>
+        <div>
+            <h3>Visual impairment experience challenges</h3>
+            <div class="col">
+                <h4>Teacher activity</h4>
+                <p>Teacher to select a number of challenges for the students to perform from the options provided in Teacher notes / <b>06-Visual-impairment-challenges.docx</b>.</p> 
+                <p>Explain homework jigsaw box plot task. Assign groups to produce plots for the challenge stations, and students who will complete each box and whisker plot that represents control, Macular Degeneration and Retinitis Pigmentosa data for each challenge station.  Each student from each challenge station MUST use the same scale on their number lines to represent their data so that their box and whisker plots can be compared in parallel during the next class.</p>
+                <h4>Teacher resources</h4>
+                <ul>
+                    <li>Teacher notes / <b>06-Visual-impairment-challenges.docx</b></li>
+                    <li>Teacher notes / <b>07-Boxplots.docx</b> and <a rel="external" title="open external link" href="https://www.youtube.com/watch?v=bpUxVAx8-Zk">Constructing Box and Whisker Plots</a></li>
+                </ul>
+                <h4>Assessment notes</h4>
+                <ul>
+                    <li>Formative assessment can be made of students teamwork skills and ability to record data.</li>
+                </ul>
+            </div>
+            <div class="col">
+                <h4>Student activity</h4>
+                <p>Students will complete two to three challenge stations and collect data for control, Macular Degeneration and Retinitis Pigmentosa goggles at that station.</p>
+                <p>Students record results as they perform tasks to station data sheets.</p>
+                <p>Before moving between stations students should reflect on the difficulties they encountered, the possible ways to overcome them and consider what other senses compensated for the loss of vision at their current station (the challenge station descriptions include questions for reflecting in this way).</p>
+                <p>On the challenge stations that students finish on, students are told they will need to produce box plots that represent the class data for either the control, Macular Degeneration or Retinitis Pigmentosa data. The data from all of the challenge stations will be represented as box plots.  This is a homework task.</p>
+                <p>All students at the same station must work within the same scale on their number lines.</p>
+                <h4>Resources required</h4>
+                <ul>
+                    <li>Student-Worksheets / <b>Vision-Challenges-worksheet.docx</b></li>
+                    <li>Classroom resources / <b>Materials-for-challenges.docx</b> (Printable template and instructions to make visual impairment goggles).</li>
                 </ul>
             </div>
         </div>
@@ -172,7 +209,7 @@ title: Bionic eye module 1
                 <h4>Resources required</h4>
                 <ul>
                     <li>Challenge Station data sheets</li>
-                    <li>Student worksheet – Vision Challenges.docx</li>
+                    <li>Student-Worksheets / <b>Vision-Challenges-worksheet.docx</b></li>
                 </ul>
             </div>
         </div>
@@ -185,13 +222,9 @@ title: Bionic eye module 1
             <h3>Reflection of challenges encountered and comparison with experience of people living with visual impairment</h3>
             <div class="col">
                 <h4>Teacher activity</h4>
-                <p>Play short video  “What it’s like to go blind”.</p> 
+                <p>Play short video  “<a rel="external" title="open external link" href="https://www.youtube.com/watch?v=PPGTfUr6O8o">What it’s like to go blind”</a>.</p> 
                 <p>Teacher asks students to reflect on their experience of the challenges and to compare them with the visually impaired people using Student worksheet – Reflection Worksheet.</p>
                 <p>Teacher asks students to discuss their reflections in their groups.</p>
-                <h4>Teacher resources</h4>
-                <ul>
-                    <li>Teacher notes - Reflection worksheet.</li>
-                </ul>
             </div>
             <div class="col">
                 <h4>Student activity</h4>
@@ -200,8 +233,8 @@ title: Bionic eye module 1
                 <p>Students in groups discuss their reflections about their experiences and compare them with those of people living with visual impairment.</p>
                 <h4>Resources required</h4>
                 <ul>
-                    <li>Video of person’s experiences living with Macular degeneration: See What It's Like To Go Blind.mp4</li>
-                    <li>Reflection worksheets</li>
+                    <li>Video of person’s experiences living with Macular degeneration: “<a rel="external"  title="open external link" href="https://www.youtube.com/watch?v=PPGTfUr6O8o">What it’s like to go blind”</a>.</li>
+                    <li>Student-Worksheets / <b>Reflection-worksheet.docx</b></li>
                 </ul>
             </div>
         </div>
